# utf-8-on-windows

./: .clang-format  .editorconfig  .gitattributes  CMakeLists.txt  README.md  utf8everywhere.cpp  utf8legacywindows.cpp  utils.h
